layout issue fixed in rewards page

--- a/src/components/leaderboard/LeaderboardBonus.css
+++ b/src/components/leaderboard/LeaderboardBonus.css
@@ -5,7 +5,6 @@
   gap: 16px;
   height: 100%;
   flex-grow: 1;
-  padding-bottom: 30px;
   justify-content: space-around;
 }
 .lost-bonus {
@@ -28,7 +27,6 @@
 }
 
 .leaderboard-bonus-section {
-  margin-bottom: 20px;
   padding: 20px;
 }
 
